--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * allow 1 phase option so both items are shown at once (reduces clicks)
-* show label per item (e.g. english / spanish)
 * allow invert items (shows second item first, etc)
 * save user selected options above into browser storage.
 * ESC should also dismiss options modal.
+* add multi cardsets (sp-en, mini-sp-en, thai-en)
